# basic_code

./: .gitignore  README.md  a.out  atoi_func.c  params_handle.c  template.c  test.c
Basic_Grammar/: study01.c  study02.h
C_language/: main.c  study01.h  study02.c
DataStructures/: sequlist.c
ELF/: main  main.asm  objcopy.md  objdump.md  readelf.md  readme.md  test1.c
GCC_knowledge/: Demo.c  Test.c  Test.h  a.out  explain.md  main.c
MachO/: README.md
assembler/: AArch64  ARM64  instruction  instruction.md  readme  readme.md  system_call_table.md
assembly/: AArch64  AArch64_old  readme.md
basic/: .getopt_func.c.swp  .open_func.c.swp  atoi_func.c  error_func.c  getopt_func.c  goto_loop.c  sizeof_func.c  sleep_func.c  switch_func.c  typedef_study.c
c_lanuage/: bool_study.c  error_func.c  format.c  sleep_func.c  system_func.c
c_study/: error_func.c  switch_func.c
cmake/: README.md
cmake/study02/: CMakeLists.txt
cmake/study02/src/math/: CMakeLists.txt
compile/shell/cmake/study01/: CMakeLists.txt
compile_auto/cmake/study02/: CMakeLists.txt
compile_auto/cmake/study02/src/math/: CMakeLists.txt
data_structure/: README.md
data_structures/: README.md
deb_package/: readme.md
inline_asm/: README.md  main  main.c  reverse.sh
inlinehook/: main
json/: main.c  main2.c  main3.c  main4.c  makefile  test.json
linux/: inotify01.c  inotify02.c  main  makefile  readme.md  test.c  test2.c
makefile/: readme.md
makefile/cmake/study03/: CMakeLists.txt
my_func/: string_handle.h  temp.c
permissions/: main.c  makefile
process_space/: a.out  offset_by_symbol.c  readme.md
(+1291 files in other folders)
